[package]
name = "x-hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bson = "2.7.0"
redis = { version = "0.23.3", features = ["tokio-comp", "json"] }
redis-macros = "0.2.1"
serde = "1.0.190"
serde_json = "1.0.107"
tokio = {version="1.33.0", features=["full"]}
rand = "*"


[lib]
name = "database"
path = "src/database/mod.rs"


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

